--- a/vue-project/src/index.css
+++ b/vue-project/src/index.css
@@ -1,155 +1,268 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 :root {
   --primary: #3B82F6;
   --success: #059669;
   --warning: #F59E0B;
   --danger: #EF4444;
-  --white: #FFFFFF;
-  --text: #3F3F3F3;
+  --navy-blue: #003060;
+  --blue: #055C9D;
+  --blue-grotto: #0E86D4;
+  --baby-blue: #68BBE3;
+  --white-text: #F0F8FF;
+  --gray-text: #555959;
+  --animation-time: 0.3s;
 }
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
-.flex {
+.main {
   display: flex;
-}
-
-.items-center {
-  align-items: center;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.justify-around {
-  justify-content: space-around;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
-}
-
-.justify-between {
-  justify-content: space-between;
-}
-
-.flex-col {
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 2rem;
+  color: var(--white-text);
+  position: relative;
+}
+
+.add-task-content,
+.show-task-content {
+  width: 70%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 1rem 0 0 0;
+  margin-top: 3rem;
+  min-height: 150px;
+  border-radius: 5px;
+  
+}
+.add-task-content {
+  background-color: var(--white-text);
+  width: 60%;
+  max-width: 500px;
+  color: var(--gray-text);
+  position: absolute;
+  margin-top: 8rem;
+  z-index: 100;
+  transition: 1.5s;
+  animation: fadeInUp var(--animation-time) forwards ease;
+}
+
+.overlay-home {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  z-index: 30;
+  top: 0;
+  left: 0;
+}
+.show-task-content {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.input {
+  border: none;
+  width: 300px;
+  border-bottom: 2px solid gray;
+  min-height: 2rem;
+  font-size: 1rem;
+  background-color: transparent;
+}
+
+.input:focus {
+  outline: none;
+  border-color: var(--blue-grotto);
+  transition: 0.5s;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--blue);
+  transition: 3.5s;
+}
+
+.one {
+  -webkit-animation-delay: 0.4s;
+  -moz-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+  
+.two {
+  -webkit-animation-delay: 1.7s;
+  -moz-animation-delay: 1.7s;
+  animation-delay: 1.7s;
+}
+  
+.three {
+  -webkit-animation-delay: 2.3s;
+  -moz-animation-delay: 2.3s;
+  animation-delay: 2.3s;
+}
+  
+.four {
+  -webkit-animation-delay: 3.3s;
+  -moz-animation-delay: 3.3s;
+  animation-delay: 3.3s;
+}
+
+/*=== FADE IN LEFT ===*/
+@-webkit-keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInLeft {
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+}
+
+/*==== FADE IN UP ===*/
+@-webkit-keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+
+.animate {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.plus-icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.add-button {
+  width: 70%;
+  max-width: 600px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 2px dashed rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 500;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1rem;
+
+  color: var(--white);
+}
+
+p {
+  font-size: 1.1rem;
+}
+
+.add-button:hover {
+  opacity: 0.8;
+}
+
+.btn {
+  color: var(--white-text);
+  padding: 0.3rem 1.1rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+
+  border: none;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.btn-primary {
+  background-color: var(--blue-grotto);
+}
+
+@media only screen and (max-width: 640px) {
+  .input {
+    width: 220px;
+  }
 }
 
 a {
   text-decoration: none;
 }
 
-.btn {
-  border: none;
-  padding: 0.5rem 1rem;
-  outline: none;
-  cursor: pointer;
-  border-radius: 4px;
+a:focus {
+  color: initial;
 }
 
-.btn:hover {
-  opacity: 0.8;
+.toUp {
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: 0.3s;
+  transform: translate3d(0, -100%, 0);
+  cursor: default;
 }
 
-.btn-success {
-  color: white;
-  background-color: var(--success);
-}
-
-.btn-primary {
-  color: white;
-  background-color: var(--primary);
-}
-
-.btn-warning {
-  color: white;
-  background-color: var(--warning);
-}
-
-.btn-danger {
-  color: white;
-  background-color: var(--danger);
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.input {
-  border: none;
-  border-bottom: 2px solid gray;
-  min-height: 2rem;
-  font-size: 1rem;
-}
-
-.input:focus {
-  outline: none;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.container {
-  width: 100%;
-  padding: 0 10%;
+.toInitial {
+  transition: 0.3s;
+  transform: translate3d(0, 0, 0);
 }
