--- a/vue-project/src/index.css
+++ b/vue-project/src/index.css
@@ -26,9 +26,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 2rem;
   color: var(--white-text);
   position: relative;
+  overflow: hidden;
 }
 
 .add-task-content,
@@ -38,12 +38,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  /* justify-content: center; */
   padding: 1rem 0 0 0;
   margin-top: 3rem;
   min-height: 150px;
   border-radius: 5px;
-  
 }
 .add-task-content {
   background-color: var(--white-text);
@@ -68,6 +67,20 @@
 }
 .show-task-content {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: auto;
+  max-height: 450px;
+  margin-bottom: 1rem;
+}
+
+::-webkit-scrollbar {
+  width: 0px; 
+  background: transparent;
 }
 
 .input {
@@ -265,4 +278,15 @@ a:focus {
 .toInitial {
   transition: 0.3s;
   transform: translate3d(0, 0, 0);
+}
+
+.task-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3.2rem;
+}
+
+.task-header span {
+  font-weight: bold;
 }
