--- a/vue-project/src/index.css
+++ b/vue-project/src/index.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 :root {
@@ -40,7 +39,7 @@
   align-items: center;
   /* justify-content: center; */
   padding: 1rem 0 0 0;
-  margin-top: 3rem;
+  margin-top: 2rem;
   min-height: 150px;
   border-radius: 5px;
 }
@@ -285,6 +284,7 @@ a:focus {
   align-items: center;
   justify-content: space-between;
   gap: 3.2rem;
+  padding-bottom: 0.5rem;
 }
 
 .task-header span {
