--- a/vue-project/src/index.css
+++ b/vue-project/src/index.css
@@ -1,292 +1,27 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
-:root {
-  --primary: #3B82F6;
-  --success: #059669;
-  --warning: #F59E0B;
-  --danger: #EF4444;
-  --navy-blue: #003060;
-  --blue: #055C9D;
-  --blue-grotto: #0E86D4;
-  --baby-blue: #68BBE3;
-  --white-text: #F0F8FF;
-  --gray-text: #555959;
-  --animation-time: 0.3s;
-}
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-}
-
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  color: var(--white-text);
-  position: relative;
-  overflow: hidden;
-}
-
-.add-task-content,
-.show-task-content {
-  width: 70%;
-  max-width: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-  padding: 1rem 0 0 0;
-  margin-top: 2rem;
-  min-height: 150px;
-  border-radius: 5px;
-}
-.add-task-content {
-  background-color: var(--white-text);
-  width: 60%;
-  max-width: 500px;
-  color: var(--gray-text);
-  position: absolute;
-  margin-top: 8rem;
-  z-index: 100;
-  transition: 1.5s;
-  animation: fadeInUp var(--animation-time) forwards ease;
-}
-
-.overlay-home {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  height: 100vh;
-  width: 100%;
-  z-index: 30;
-  top: 0;
-  left: 0;
-}
-.show-task-content {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.tasks {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-y: auto;
-  max-height: 450px;
-  margin-bottom: 1rem;
-}
-
-::-webkit-scrollbar {
-  width: 0px; 
-  background: transparent;
-}
-
-.input {
-  border: none;
-  width: 300px;
-  border-bottom: 2px solid gray;
-  min-height: 2rem;
-  font-size: 1rem;
-  background-color: transparent;
-}
-
-.input:focus {
-  outline: none;
-  border-color: var(--blue-grotto);
-  transition: 0.5s;
-}
-
-.container {
-  width: 100%;
-  height: 100vh;
-  background-color: var(--blue);
-  transition: 3.5s;
-}
-
-.one {
-  -webkit-animation-delay: 0.4s;
-  -moz-animation-delay: 0.4s;
-  animation-delay: 0.4s;
-}
-  
-.two {
-  -webkit-animation-delay: 1.7s;
-  -moz-animation-delay: 1.7s;
-  animation-delay: 1.7s;
-}
-  
-.three {
-  -webkit-animation-delay: 2.3s;
-  -moz-animation-delay: 2.3s;
-  animation-delay: 2.3s;
-}
-  
-.four {
-  -webkit-animation-delay: 3.3s;
-  -moz-animation-delay: 3.3s;
-  animation-delay: 3.3s;
-}
-
-/*=== FADE IN LEFT ===*/
-@-webkit-keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
+@layer base {
+  body {
+    @apply font-roboto;
   }
-
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+  ::-webkit-scrollbar {
+    width: 0px; 
+    background: transparent;
   }
-}
-
-@keyframes fadeInLeft {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
+  .form-group {
+    @apply flex items-center relative mb-6;
   }
-
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+  .form-group:nth-child(2) {
+    @apply mt-8;
   }
-}
-
-.fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-}
-
-/*==== FADE IN UP ===*/
-@-webkit-keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+  label {
+    @apply absolute font-normal cursor-text text-sm;
   }
-
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
+  .message {
+    @apply flex flex-col items-center justify-center h-20 w-3/5 rounded mb-4 relative animate-fadein-up;
   }
-}
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-
-  to {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInUp {
-  -webkit-animation-name: fadeInUp;
-  animation-name: fadeInUp;
-}
-
-.animate {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.plus-icon {
-  height: 1.5rem;
-  width: 1.5rem;
-}
-
-.add-button {
-  width: 70%;
-  max-width: 600px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px dashed rgba(255, 255, 255, 0.1);
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: 500;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 1rem;
-
-  color: var(--white);
-}
-
-p {
-  font-size: 1.1rem;
-}
-
-.add-button:hover {
-  opacity: 0.8;
-}
-
-.btn {
-  color: var(--white-text);
-  padding: 0.3rem 1.1rem;
-  font-size: 1.1rem;
-  font-weight: 500;
-
-  border: none;
-  border-radius: 4px;
-}
-
-.btn:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.btn-primary {
-  background-color: var(--blue-grotto);
-}
-
-@media only screen and (max-width: 640px) {
-  .input {
-    width: 220px;
-  }
-}
-
-a {
-  text-decoration: none;
-}
-
-a:focus {
-  color: initial;
-}
-
-.toUp {
-  font-weight: 600;
-  font-size: 1.2rem;
-  transition: 0.3s;
-  transform: translate3d(0, -100%, 0);
-  cursor: default;
-}
-
-.toInitial {
-  transition: 0.3s;
-  transform: translate3d(0, 0, 0);
-}
-
-.task-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 3.2rem;
-  padding-bottom: 0.5rem;
-}
-
-.task-header span {
-  font-weight: bold;
-}
+} 
